force-app/main/default/objects/AAO_Assessment_Stage__mdt/fields/AAO_By_Stage__c.field-meta.xml
<CustomField>
    <fullName>AAO_By_Stage__c</fullName>
    <description>OUR SHIPPED DEFAULT: the stage sort order by which this question should have been answered. An unestablished question at or past this stage raises the red flag with the reason &quot;unknown past stage&quot;; before it, blank is lawful and quiet and nothing fires. Sort order rather than a stage name, because a stage NAME is the org&apos;s to write and would be the seventy-sixth stamp&apos;s label hazard on a third object.</description>
    <label>By Stage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>