force-app/main/default/objects/AAO_Assessment_Stage__mdt/fields/AAO_Computed_Predicate__c.field-meta.xml
<CustomField>
    <fullName>AAO_Computed_Predicate__c</fullName>
    <description>WHICH LEDGER PREDICATE ANSWERS THIS QUESTION, blank where none does. This is the binding the computed plane needs and cannot get any other way: a predicate is ours and a question code is the customer&apos;s, so a computed catalog that named question codes in Apex would compute nothing in any org but this one - LAW #1 failing on the same path the meaning map failed on. Seeded by us against our own BANT codes, ORG-OVERRIDABLE, the shape the proposal already ruled for computed qualifier predicates. Blank is the honest majority: thirteen of the fifteen require the customer&apos;s mouth by their own element text and no record can stand in for it.</description>
    <label>Computed Predicate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>