force-app/main/default/objects/AAO_Assessment_Stage__mdt/fields/AAO_Note__c.field-meta.xml
<CustomField>
    <fullName>AAO_Note__c</fullName>
    <description>Why this marker sits where it does, in plain words, for the admin who will move it. A configuration row nobody can read is a configuration row nobody will lawfully change.</description>
    <label>Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>