force-app/main/default/objects/AAO_Assessment_Stage__mdt/fields/AAO_Org_Override__c.field-meta.xml
<CustomField>
    <fullName>AAO_Org_Override__c</fullName>
    <description>THE ORG&apos;S OWN ANSWER, and it wins whenever it is set. Blank means the shipped default stands. A separate field rather than an edit to the default, so that what WE shipped and what the CUSTOMER decided stay legible as two different facts - the same reason AAO_Setting__mdt and AAO_People_Question__mdt keep theirs apart, and the reason an org that upgrades does not silently lose its own decision.</description>
    <label>Org Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>