force-app/main/default/objects/AAO_Assessment_Stage__mdt/fields/AAO_Speaker_Requirement__c.field-meta.xml
<CustomField>
    <fullName>AAO_Speaker_Requirement__c</fullName>
    <description>WHOSE MOUTH THIS QUESTION REQUIRES, blank to leave the contract at its discovery default. Configuration rather than code for the same reason the by-stage marker and the computed predicate are: the requirement is a property of a question we DISCOVER, so it cannot be known in Apex, and an org that words its questions differently must be able to state whose words answer them. Our seed sets Buyer_Side wherever the question&apos;s own element text names the customer&apos;s mouth, which is thirteen of the fifteen. Values match AAO_Evidence_Contract__c.AAO_Speaker_Requirement__c.</description>
    <label>Speaker Requirement</label>
    <length>40</length>
    <type>Text</type>
</CustomField>